ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
        - path: /api1
          pathType: Prefix
          backend:
            service:
              name: api1-srv
              port:
                number: 3003
        - path: /api2
          pathType: Prefix
          backend:
            service:
              name: api2-srv
              port:
                number: 3004
